# CSCI2461_SearchEngine

./: .floo  CMakeLists.txt  main.c
data-structures/: hashTable.c  hashTable.h  linkedlist.c  linkedlist.h
pre-processing/: documentRetrieval.c  documentRetrieval.h
